# cmake_template

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  run.sh
libs/demo_lib/: CMakeLists.txt
libs/demo_lib/cpp/: adder.h
